[package]
name = "icountant-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.64"
tokio-postgres = "0.7.8"
tokio = { version = "1.16.1", features = ["full"] }
env_logger = "0.9.0"
log = "0.4.14"
dotenv = "0.15.0"
chrono = "0.4.24"